--- a/solution_spotify.ipynb
+++ b/solution_spotify.ipynb
@@ -30,8 +30,8 @@
    "outputs": [],
    "source": [
     "#Initialize SpotiPy with user credentias\n",
-    "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(client_id=\"175d33f698a2423d91d1793bcbe4f199\",\n",
-    "                                                           client_secret=\"845a514bc2b042e4ac5115e5d7b3bcde\"))\n"
+    "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(client_id=\"\",\n",
+    "                                                           client_secret=-""))\n"
    ]
   },
   {
